# Terminus-2nd-Edition

./: .cursorignore  .cursorindexingignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE.md  README.md  TASK_PROPOSAL_RUBRIC.md  TB3_HANDBOOK.html  TB3_HANDBOOK.md  commands.md  difficulty_mechanism_plan.md  first-look-result.json  make_patch.py  submission_packet.txt  terminus_unified_ground_truth_specification_updated.md  typescript  workflow-prompts.md
repo_tests/fixtures/tasks/lsm-snapshot-recovery/environment/: CMakeLists.txt  Dockerfile
repo_tests/fixtures/tasks/rollback-replay-divergence/environment/: CMakeLists.txt  Dockerfile
tasks/cascade-compaction/environment/: CMakeLists.txt  Dockerfile
tasks/cascade-compaction/environment/config/: defaults.env
tasks/cascade-compaction/environment/docs/: formal_rules.md
tasks/cascade-compaction/environment/engine/: pipeline.cpp  pipeline.hpp  session_registry.cpp  session_registry.hpp  types.hpp
tasks/cascade-compaction/environment/fixtures/crash_profiles/: profile_a.json  profile_b.json  profile_c.json
tasks/cascade-compaction/environment/k7w/: lane_buffer.cpp  lane_buffer.hpp  lane_mux.cpp  lane_mux.hpp
tasks/cascade-compaction/environment/logging/: README
tasks/cascade-compaction/environment/m9p/: stamp_mux.cpp  stamp_mux.hpp
tasks/cascade-compaction/environment/n4q/: fold_apply.cpp  fold_apply.hpp  mux_sel.cpp  mux_sel.hpp  rank_lane.cpp  rank_lane.hpp
tasks/cascade-compaction/environment/pilot/: entry.cpp
tasks/cascade-compaction/environment/py/: chain_fold.py
tasks/cascade-compaction/environment/schemas/: ledger_run.schema.json  report_row.schema.json
tasks/cascade-compaction/environment/state/: README
tasks/cascade-compaction/environment/tools/: summary_mux.cpp  summary_mux.hpp
tasks/cascade-compaction/environment/util/: digest.cpp  digest.hpp  json_codec.cpp  json_codec.hpp
tasks/checkpoint-bridge/environment/: CMakeLists.txt  Dockerfile
tasks/checkpoint-bridge/environment/c7k/: decoy_h1.cpp  p1m.cpp  p1m.hpp
tasks/checkpoint-bridge/environment/docs/: field_guide.md  ops_notes.md
tasks/checkpoint-bridge/environment/driver/: entry.cpp  flow.cpp  flow.hpp
tasks/checkpoint-bridge/environment/engine/: phase_hook.cpp  phase_hook.hpp  store.cpp  store.hpp  types.cpp  types.hpp
tasks/checkpoint-bridge/environment/etc/: service.env  version.txt
tasks/checkpoint-bridge/environment/exec/: run_cycle.sh
tasks/checkpoint-bridge/environment/fixtures/: acct_seed.json  alt_view.json  pr_window.json  rb_policy.json  v9_markers.json  window_a.json  window_b.json
tasks/checkpoint-bridge/environment/logging/: l7_format.txt
tasks/checkpoint-bridge/environment/m2p/: decoy_h2.cpp  q4n.cpp  q4n.hpp
tasks/checkpoint-bridge/environment/schemas/: durable_row.schema.json
tasks/checkpoint-bridge/environment/schemas/report_fragments/: run.schema.json  wave.schema.json
tasks/checkpoint-bridge/environment/tooling/: merge_tool.py  seq_tool.py
tasks/checkpoint-bridge/environment/util/: digest.cpp  digest.hpp  json_emit.cpp  json_emit.hpp
tasks/checkpoint-bridge/environment/w9n/: decoy_h3.cpp  frame.cpp  frame.hpp  s2t.cpp  s2t.hpp
tasks/generation-boundary-leak-23/environment/: CMakeLists.txt  Dockerfile  README.md
tasks/generation-boundary-leak-23/environment/config/: runtime.toml
tasks/generation-boundary-leak-23/environment/docs/: generator_contract.md
tasks/generation-boundary-leak-23/environment/harness/: __init__.py  genstage1.cpp  genstage2.cpp  run_sim.py  seed_schedule.json
tasks/generation-boundary-leak-23/environment/harness/scenarios/: s1.json  s2.json  s3.json  s4.json  s5.json  s6.json  s7.json
tasks/generation-boundary-leak-23/environment/journal_core/: __init__.py  frame_merge.cpp  frame_merge.hpp  merge_shadow.cpp  redact_meta.cpp  types_local.cpp  types_local.hpp
tasks/generation-boundary-leak-23/environment/resume_lane/: clock_stub.cpp  overlap_policy.cpp  span_materialize.cpp  span_materialize.hpp  span_probe.cpp
tasks/generation-boundary-leak-23/environment/summary_ring/: carry_bind.cpp  carry_bind.hpp  echo_table.cpp  rollup_reader.cpp  tally_view.cpp
tasks/migration-window-poisoning-15/environment/: CMakeLists.txt  Dockerfile  README.md
tasks/migration-window-poisoning-15/environment/c2/: epoch_mirror.cpp
tasks/migration-window-poisoning-15/environment/config/: build_matrix.txt  migration_policy.toml  runtime.toml
tasks/migration-window-poisoning-15/environment/d0/: pf_t7_shadow.cpp
tasks/migration-window-poisoning-15/environment/d1/: pf_q3_stub.cpp
tasks/migration-window-poisoning-15/environment/docs/: corpus_hint.txt  field_guide.md  overview.txt  replay_audit_contract.md
tasks/migration-window-poisoning-15/environment/driver/: replay_driver.cpp  schedule_loader.cpp
tasks/migration-window-poisoning-15/environment/e3/: tail_queue.cpp
tasks/migration-window-poisoning-15/environment/g0/: adm_q.cpp
tasks/migration-window-poisoning-15/environment/g0/fixtures/: lane_seed_a.json  (+1 more)
tasks/migration-window-poisoning-15/environment/g1/: align_q.cpp  barrier_gate.cpp  overlap_gate.cpp  window_hooks.cpp
tasks/migration-window-poisoning-15/environment/h0/: line_q.cpp
tasks/migration-window-poisoning-15/environment/h2/: view_q.cpp
tmp/archive-repair-review/environment/: CMakeLists.txt  Dockerfile  runner.cpp
tmp/archive-repair-review/environment/app/: entry.cpp  flow.cpp  flow.hpp
tmp/archive-repair-review/environment/rx/: gen_track.cpp  gen_track.hpp  phase_hook.cpp  phase_hook.hpp  shadow_clip.cpp
tmp/archive-repair-review/environment/util/: json_write.cpp  json_write.hpp  tag_core.cpp  tag_core.hpp
tmp/archive-repair-review/environment/vx/: selector.cpp  selector.hpp  side_index.cpp  store.cpp  store.hpp
tmp/archive-repair-review/environment/wx/: frame.cpp  frame.hpp  hist_lane.cpp  link.cpp  link.hpp
tmp/snapshot-compaction-fix/environment/: CMakeLists.txt  Dockerfile
tmp/snapshot-compaction-fix/environment/config/: probe.toml  runtime.toml
tmp/snapshot-compaction-fix/environment/docs/: report_contract.md  verifier_notes.md
(+1072 files in other folders)
